[gd_scene load_steps=9 format=2]

[ext_resource path="res://Script/DoorBody.gd" type="Script" id=1]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.862745, 0.486275, 0.113725, 1 )

[sub_resource type="ConcavePolygonShape" id=3]
data = PoolVector3Array( -1, 1, 1, 1, 1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, -1, 1, 1, 1, -1, -1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, 1, 1, 1, -1, 1, -1, -1, 1, -1, 1, -1, 1, -1, -1, 1, 1, -1, -1, -1, -1, 1, 1, -1, -1, 1, -1, -1, -1, 1, 1, 1, -1, 1, 1, 1, 1, -1, -1, 1, 1, -1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, 1, -1, -1, -1, 1, -1, 1, 1, -1, -1, -1, -1, -1 )

[sub_resource type="Animation" id=4]
resource_name = "Close"
length = 0.7
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rotation_degrees:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -1, -0.25, 0, 0.25, 0, -1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.7 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:rotation_degrees:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -70, -0.25, 0, 0.25, 0, 8, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.7 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:rotation_degrees:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.7 )
}

[sub_resource type="Animation" id=5]
resource_name = "Open"
length = 0.7
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rotation_degrees:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -1, -0.25, 0, 0.25, 0, -1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.7 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:rotation_degrees:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 8, -0.25, 0, 0.25, 0, -70, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.7 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:rotation_degrees:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.7 )
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rotation_degrees:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:rotation_degrees:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 8, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:rotation_degrees:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( -4, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="BoxShape" id=7]
extents = Vector3( 3.01772, 1, 1 )

[node name="MovingDoor" type="Spatial"]
transform = Transform( 2.04245, -0.104323, -0.328173, 0.103002, 2.06865, -0.0165499, 0.32859, 0, 2.04505, 0.0508072, 0, 0 )

[node name="Hinge" type="Spatial" parent="."]
transform = Transform( 0.988025, 0.0666546, 0.139152, -0.0697458, 0.997412, 0.0174524, -0.137628, -0.0269487, 0.990117, 0.196105, 0.615175, -0.0315092 )

[node name="door" type="MeshInstance" parent="Hinge"]
transform = Transform( 0.704483, 3.14321e-09, 5.58794e-09, 5.00586e-09, 1.6175, -4.65661e-10, 0, 0, 0.165618, -0.728189, 0, 0.0895755 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="DoorBody" type="StaticBody" parent="Hinge/door"]
transform = Transform( 1, 0, 0, 0, 1, 0, 4.65661e-10, 0, 1, 0, 0, 0 )
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="Hinge/door/DoorBody"]
transform = Transform( 0.998603, -0.121324, -0.000192389, 0.0230139, 0.998603, -0.000115171, 0.00372895, 0.0105478, 0.999999, 0, 0, 0 )
shape = SubResource( 3 )

[node name="DoorAnim" type="AnimationPlayer" parent="Hinge"]
unique_name_in_owner = true
anims/Close = SubResource( 4 )
anims/Open = SubResource( 5 )
anims/RESET = SubResource( 6 )

[node name="DoorArea" type="Area" parent="."]
transform = Transform( 1, 0, 4.47035e-08, 0, 1, 0, -4.47035e-08, 0, 1, -0.418154, 0, 0.067187 )

[node name="CollisionShape" type="CollisionShape" parent="DoorArea"]
transform = Transform( 1, 0, 5.96046e-08, 0, 1, 0, -5.96046e-08, 0, 1, -0.109878, 0, -0.683851 )
shape = SubResource( 7 )

[connection signal="body_entered" from="DoorArea" to="Hinge/door/DoorBody" method="_on_DoorArea_body_entered"]
[connection signal="body_exited" from="DoorArea" to="Hinge/door/DoorBody" method="_on_DoorArea_body_exited"]
